Fixed an issue where mobile header was not centered

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ section {
 
 section h2 {
   font-weight: 200;
+  text-align: center;
 }
 
 .bolder {
